--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "CC0-1.0",
   "devDependencies": {
+    "@openzeppelin/test-helpers": "^0.5.6",
     "embark": "^6.0.0",
     "embark-basic-pipeline": "^6.0.0",
     "embark-geth": "^6.0.0",
@@ -24,5 +25,12 @@
     "embarkjs-swarm": "^6.0.0",
     "embarkjs-web3": "^6.0.0",
     "embarkjs-whisper": "^6.0.0"
+  },
+  "dependencies": {
+    "bootstrap": "^4.5.2",
+    "classnames": "^2.2.6",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "reactstrap": "^8.6.0"
   }
 }
